# courier

./: Cargo.toml  build.rs  config.toml  generated.rs
src/: lib.rs  main.rs  operations.rs
src/operations/: interval.rs  interval_fanout.rs  mod.rs  stream.rs
src/readers/: api.rs  kafka.rs  mod.rs
src/schemas/: bytes.rs  kafka.rs  kafka_message.rs  mod.rs
src/transforms/: kafka.rs
src/writers/: kafka.rs  mod.rs
