[package]
name = "courier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["dynamic-linking"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
