[package]
name = "courier"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
quote = "1.0.41"
rdkafka = { version = "0.38.0", features = ["dynamic-linking"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"

[build-dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
